-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 6.0.0
-
None
-
-
49c421e5c43a30a2e84d532ab0752d77bcc8b33b (qt-creator/qt-creator/6.0)
When clangd support enabled, an warning appears for every file:
path\to\main.cpp:1: The last /TC or /TP option takes precedence over earlier instances
With libclang(clangd turned off), the warning disappears.
For Gerrit Dashboard: QTCREATORBUG-26664 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
384822,2 | ClangCodeModel: Prevent duplicate "/Tx" options | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |