ClangCodeModel: Prevent duplicate "/Tx" options

Those trigger code model warnings.

Fixes: QTCREATORBUG-26664
Change-Id: I0ed6b9edeeb94c8597b30c0be514d2b34dbedc49
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>